--- a/SimpleAppEvent/pom.xml
+++ b/SimpleAppEvent/pom.xml
@@ -32,6 +32,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>6.0.12</version>
+        </dependency>
     </dependencies>
 
     <build>
