--- a/spring-event/pom.xml
+++ b/spring-event/pom.xml
@@ -32,6 +32,10 @@
             <artifactId>spring-tx</artifactId>
             <version>5.3.23</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 
 	<build>
